--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 # PyTorch
 #torch>=0.4.1
 pytorch-nlp
+pytorch-model-summary
 # Progress bars in model download and training scripts
 tqdm
 # Accessing files from S3 directly.
